@@ -1,3 +1,8 @@
+2006-12-04  Marcus Meissner  <marcus@jet.franken.de>
+
+	* ptp.c: Fixed the response packet in-data-phase
+	  handling to actually work. From libmtp folks.
+
 2006-12-02  Marcus Meissner  <marcus@jet.franken.de>
 
 	* library.c: Added Canon PowerShot SD600, HP Photosmart C500.
